fix spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -85,7 +85,7 @@ div {
 	position: absolute;
     color: black;
     background: black; 
-    margin-left: 20%;
+    margin-left: 21%;
     margin-right: 20%;
     width: 60%; 
     height: 1%;
